# AI-Powered-Trend-Analyzer

./: .env.example  .gitignore  README.md  main.py  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
AI-Powered-Trend-Analyzer-main/Frontend/: app.js  index.html  package-lock.json  package.json
AI-Powered-Trend-Analyzer-main/Frontend/app/: layout.tsx  page.tsx
AI-Powered-Trend-Analyzer-main/Frontend/app/api/generate/: route.ts
AI-Powered-Trend-Analyzer-main/Frontend/app/api/health/: route.ts
AI-Powered-Trend-Analyzer-main/Frontend/components/: chat-container.tsx  chat-input.tsx  welcome-screen.tsx
AI-Powered-Trend-Analyzer-main/backend/: database.py  ollama_embedding.py  query_data.py
app/: globals.css
app/api/health/: route.ts
components/: chat-container.tsx  chat-message.tsx  header.tsx  welcome-screen.tsx
