[project]
name = "ai-powered-trend-analyzer"
version = "0.1.0"
description = "AI-powered trend analyzer backend and frontend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "chromadb>=1.5.9",
    "ollama>=0.6.2",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "tweepy>=4.16.0",
    "uvicorn>=0.22.0",
]
